src/objects/Address_Authentication_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Credentials for the SmartyStreets address verification/normalization integration.</description>
    <fields>
        <fullName>Address_Verification_Endpoint__c</fullName>
        <description>The endpoint (URL) to point to for address verification.</description>
        <inlineHelpText>The endpoint (URL) to point to for address verification.</inlineHelpText>
        <label>Address Verification Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Auth_ID__c</fullName>
        <inlineHelpText>LiveAddress API Auth ID - get yours at https://smartystreets.com/account/keys</inlineHelpText>
        <label>Auth ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <inlineHelpText>LiveAddress API Auth Token (unencoded) - get yours at https://smartystreets.com/account/keys</inlineHelpText>
        <label>Auth Token</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class that will implement the address verification/normalization logic. It will contact the specified endpoint(s) and validate and/or normalize address data.</description>
        <inlineHelpText>Class that will implement the address verification/normalization logic. It will contact the specified endpoint(s) and validate and/or normalize address data.</inlineHelpText>
        <label>Class</label>
        <length>124</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_Key__c</fullName>
        <inlineHelpText>LiveAddress API numeric HTML Auth Key (depends on matching domain) - get yours at https://smartystreets.com/account/keys</inlineHelpText>
        <label>HTML Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <defaultValue>5</defaultValue>
        <inlineHelpText>Callout timeout in seconds</inlineHelpText>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zipcode_Verification_Endpoint__c</fullName>
        <description>The endpoint (URL) to point to for zipcode verification.</description>
        <inlineHelpText>The endpoint (URL) to point to for zipcode verification.</inlineHelpText>
        <label>Zipcode Verification Endpoint</label>
        <type>Url</type>
    </fields>
    <label>Address Authentication Settings</label>
</CustomObject>